--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,11 @@
+{% set MODULE_NAME = request.url.path.lstrip('/') %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/{{ MODULE_NAME }}/custom.css">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -11,6 +14,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/basics">Basics</a></li>
           <li><a href="/semantic">Semantic Analysis</a></li>
+          <li><a href="/gpt4all">gpt4all</a></li>
       </ul>
     </nav>
     <main>
@@ -18,7 +22,7 @@
     </main>
 </body>
 
-{% block extra_js %}{% endblock %}
+<script src="/static/{{ MODULE_NAME }}/index.js"></script>
 <script>
   document.querySelectorAll('nav a').forEach(link => {
       if (link.href === window.location.href) {
@@ -26,4 +30,6 @@
       }
   });
 </script>
+{% block extra_js %}{% endblock %}
+
 </html>
