adds gpt4all module

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,5 @@ Home Page
 {% endblock %}
 
 {% block content %}
-<h1>Welcome to our FastAPI application!</h1>
+<h1>Welcome to this FastAPI edu demo!</h1>
 {% endblock %}
