--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
           <li><a href="/basics">Basics</a></li>
           <li><a href="/semantic">Semantic Analysis</a></li>
           <li><a href="/gpt4all">gpt4all</a></li>
+          <li><a href="/wizard_lm">Wizard LM</a></li>
+          <li><a href="/guidance">Guidance</a></li>
       </ul>
     </nav>
     <main>
