fixes up wizard_lm to work

--- a/templates/gpt4all.html
+++ b/templates/gpt4all.html
@@ -14,6 +14,6 @@ Text Generation Via GPT4ALL
           <input type="submit" value="Submit">
       </div>
   </form>
-  <pre id="result"></pre>
+  <pre id="result">sample</pre>
 </section>
 {% endblock %}
