--- a/templates/wizard_lm.html
+++ b/templates/wizard_lm.html
@@ -9,11 +9,11 @@ Wizard LM
   <h2>Submit your text to get more text.</h2>
   <form id="jsonForm">
       <label for="input_data">Text:</label>
-      <textarea id="input_data" name="input_data">How many planets are there?</textarea>
+      <textarea id="input_data" name="input_data">Q: Name the planets in the solar system? A: </textarea>
       <div>
           <input type="submit" value="Submit">
       </div>
   </form>
-  <div id="result"></div>
+  <pre id="result"></pre>
 </section>
 {% endblock %}
