--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
       <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/basics">Basics</a></li>
-          <li><a href="/semantic">Semantic Analysis</a></li>
+          <li><a href="/sentiment">Sentiment Analysis</a></li>
           <li><a href="/gpt4all">gpt4all</a></li>
           <li><a href="/wizard_lm">Wizard LM</a></li>
           <li><a href="/guidance">Guidance</a></li>
