--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Semantic Analysis Via Huggingface
+Sentiment Analysis Via Huggingface
 {% endblock %}
 
 {% block content %}
