--- a/templates/basics.html
+++ b/templates/basics.html
@@ -7,7 +7,7 @@ FastAPI Basics
 {% block content %}
 <section>
   <h2>Example: Submit a param in a get</h2>
-  <form action="/hello" method="get">
+  <form action="/basics/hello" method="get">
       <label for="name">Name:</label><br>
       <input type="text" id="name" name="name"><br>
       <input type="submit" value="Submit">
