improves code modularization

--- a/layout/_base.html
+++ b/layout/_base.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
       <ul>
-        {% include "_navbar.html" %}
+        {% include "layout/_navbar.html" %}
       </ul>
     </nav>
     <main>
