--- a/layout/home.html
+++ b/layout/home.html
@@ -7,6 +7,8 @@ Home Page
 {% block content %}
 <h1>Welcome to this FastAPI edu demo!</h1>
 <div>
-    Some of the modules in this demo won't run on my laptop.  I recommend a machine with 64gb.
+    I recommend running this on a machine with 64gb.
+    Some of the modules in this demo won't run on my laptop.
 </div>
 {% endblock %}
+
