--- a/layout/_navbar.html
+++ b/layout/_navbar.html
@@ -3,4 +3,5 @@
 <li><a href="/sentiment">Sentiment Analysis</a></li>
 <li><a href="/gpt4all">gpt4all</a></li>
 <li><a href="/wizard_lm">Wizard LM</a></li>
+<li><a href="/speech_t5">Speech T5</a></li>
 <li><a href="/guidance">Guidance</a></li>
