--- a/layout/_navbar.html
+++ b/layout/_navbar.html
@@ -5,3 +5,4 @@
 <li><a href="/wizard_lm">Wizard LM</a></li>
 <li><a href="/speech_t5">Speech T5</a></li>
 <li><a href="/guidance">Guidance</a></li>
+<li><a href="/starcoder_gptq">StarCoder GPTQ</a></li>
